results/scraper/launchpad-without-comments/1888431
v5.1.0-rc1 build fails on Mac OS X 10.11.6 

Hi all, 

build of tag v5.1.0-rc1 fails on Mac OS X 10.11.6 (El Capitan) with the following error:

git clone https://git.qemu.org/git/qemu.git
    <output elided, but all OK>
cd qemu
git submodule init
    <output elided, but all OK>
git submodule update --recursive
    <output elided, but all OK>
./configure
    <output elided, but all OK>
make
    <output elided, but all OK up until fail>

  CC      trace/control.o
In file included from trace/control.c:29:
In file included from /Users/rtb/src/qemu/include/monitor/monitor.h:4:
In file included from /Users/rtb/src/qemu/include/block/block.h:4:
In file included from /Users/rtb/src/qemu/include/block/aio.h:23:
/Users/rtb/src/qemu/include/qemu/timer.h:843:9: warning: implicit declaration of function 'clock_gettime' is invalid in C99
      [-Wimplicit-function-declaration]
        clock_gettime(CLOCK_MONOTONIC, &ts);
        ^
/Users/rtb/src/qemu/include/qemu/timer.h:843:23: error: use of undeclared identifier 'CLOCK_MONOTONIC'
        clock_gettime(CLOCK_MONOTONIC, &ts);
                      ^
1 warning and 1 error generated.
make: *** [trace/control.o] Error 1


rtb:qemu rtb$ git log -n1
commit c8004fe6bbfc0d9c2e7b942c418a85efb3ac4b00 (HEAD -> master, tag: v5.1.0-rc1, origin/master, origin/HEAD)
Author: Peter Maydell <email address hidden>
Date:   Tue Jul 21 20:28:59 2020 +0100

    Update version for v5.1.0-rc1 release
    
    Signed-off-by: Peter Maydell <email address hidden>
rtb:qemu rtb$ 


Please find the full output of all the commands (from git clone of the repo, to the make) in the attached file "buildfail.txt".

Thank you!

Best regards, 

Robert Ball